# structopt

./: .appveyor.yml  .travis.yml  CMakeLists.txt  README.md  clang-format.bash  conanfile.py  run_tests.sh  single_include.json  structoptConfig.cmake.in
include/argo/: argo.hpp  argument_parser.hpp  array_size.hpp  is_specialization.hpp  is_stl_container.hpp  main.cpp  parser.hpp
include/structopt/: app.hpp  array_size.hpp  exception.hpp  is_number.hpp  is_specialization.hpp  is_stl_container.hpp  main  main.cpp  parser.hpp  string.hpp  structopt.hpp  sub_command.hpp  visitor.hpp
samples/: CMakeLists.txt  compound_arguments.cpp  demo.cpp  double_dash_argument.cpp  enum_class_argument.cpp  flag_arguments.cpp  float_literals.cpp  integer_literals.cpp  nested_structures.cpp  nested_structures_2.cpp  option_delimiters.cpp  optional_arguments.cpp  pair_argument.cpp  positional_and_compound_arguments.cpp  positional_and_optional_arguments.cpp  positional_arguments.cpp  printing_help.cpp  printing_help_custom.cpp  remaining_arguments.cpp  tuple_arguments.cpp
single_include/structopt/: structopt.hpp
test/: CMakeLists.txt  test_3d_array_positional_argument.cpp  test_array_optional_argument.cpp  test_array_positional_argument.cpp  test_container_adapter_positional_argument.cpp  test_double_dash_option_delimiter.cpp  test_enum_optional_argument.cpp  test_enum_positional_argument.cpp  test_list_positional_argument.cpp  test_map_positional_argument.cpp  test_multiple_nested_structs_positional.cpp  test_nested_struct.cpp  test_optional_argument_naming.cpp  test_optional_flag_argument.cpp  test_set_positional_argument.cpp  test_single_optional_argument.cpp  test_single_positional_and_optional.cpp  test_single_positional_argument.cpp  test_trailing_positional_arguments.cpp  test_tuple_optional_argument.cpp  test_tuple_positional_argument.cpp  test_vector_positional_argument.cpp
tests/: CMakeLists.txt  doctest.hpp  test_array_positional_argument.cpp  test_combined_flag_arguments.cpp  test_deque_optional_argument.cpp  test_deque_positional_argument.cpp  test_double_dash_option_delimiter.cpp  test_enum_optional_argument.cpp  test_enum_positional_argument.cpp  test_equal_delimiter_optional_argument.cpp  test_excess_positional_arguments.cpp  test_list_positional_argument.cpp  test_map_positional_argument.cpp  test_multiple_nested_structs_positional.cpp  test_nested_struct.cpp  test_option_delimiter.cpp  test_optional_argument_naming.cpp  test_optional_flag_argument.cpp  test_set_positional_argument.cpp  test_single_optional_argument.cpp  test_single_positional_and_optional.cpp  test_single_positional_argument.cpp  test_trailing_positional_arguments.cpp  test_tuple_positional_argument.cpp  test_unknown_optional_argument.cpp  test_vector_optional_argument.cpp  test_vector_positional_argument.cpp
