
add_executable(demo demo.cpp)
target_link_libraries(demo PRIVATE structopt::structopt)

add_executable(positional_arguments positional_arguments.cpp)
target_link_libraries(positional_arguments PRIVATE structopt::structopt)

add_executable(optional_arguments optional_arguments.cpp)
target_link_libraries(optional_arguments PRIVATE structopt::structopt)

add_executable(flag_arguments flag_arguments.cpp)
target_link_libraries(flag_arguments PRIVATE structopt::structopt)

add_executable(positional_and_optional_arguments positional_and_optional_arguments.cpp)
target_link_libraries(positional_and_optional_arguments PRIVATE structopt::structopt)

add_executable(enum_class_argument enum_class_argument.cpp)
target_link_libraries(enum_class_argument PRIVATE structopt::structopt)

add_executable(remaining_arguments remaining_arguments.cpp)
target_link_libraries(remaining_arguments PRIVATE structopt::structopt)

add_executable(compound_arguments compound_arguments.cpp)
target_link_libraries(compound_arguments PRIVATE structopt::structopt)
